--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -20,7 +20,7 @@ import org.apache.tools.ant.taskdefs.condition.Os
 description = 'Ballerina - GraphQl Federation Gateway'
 
 def packageName = "graphql-federation-gateway"
-def packageOrg = "Ishad-M-I-M"
+def packageOrg = "xlibb"
 def tomlVersion = stripBallerinaExtensionVersion("${project.version}")
 def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
 def ballerinaTomlFile = new File("$project.projectDir/Ballerina.toml")
